--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <link href="./css/styles.css" rel="stylesheet" />
@@ -19,20 +19,22 @@
   <body>
     <header class="header-items">
       <nav>
-        <a class="logo" href="./index.html"><span>WEB</span>STUDIO</a>
+        <a class="logo" href="./index.html">WEB<span>STUDIO</span></a>
         <ul class="header-link">
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="./index.html">Portfolio</a></li>
+          <li><a class="link" href="./index.html">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="header-contacts">
+      <address class="header-contacts">
+        <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -43,6 +45,7 @@
         <button class="page-button" type="button">Order Service</button>
       </section>
       <section class="main-section-1">
+        <h2></h2>
         <ul>
           <li>
             <h3 class="section-title">Strategy</h3>
