--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       </section>
     </main>
     <footer>
-      <a class="logo" href="./index.html"><span>WEB</span>STUDIO</a>
+      <a class="logo" href="./index.html">WEB<span>STUDIO</span></a>
       <p class="logo-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
