--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="header-items">
       <nav>
-        <a class="logo" href="./index.html">WEB<span>STUDIO</span></a>
+        <a class="logo" href="./index.html">WEB<span class="logo-span">STUDIO</span></a>
         <ul class="header-link">
           <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="./index.html">Portfolio</a></li>
@@ -179,7 +179,7 @@
       </section>
     </main>
     <footer>
-      <a class="logo" href="./index.html">WEB<span>STUDIO</span></a>
+      <a class="logo" href="./index.html">WEB<span class="logo-span">STUDIO</span></a>
       <p class="logo-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
