--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
   <body>
     <header class="header-items">
       <nav>
-        <a class="logo" href="./index.html">WEB<span class="logo-span">Studio</span></a>
+        <a class="logo" href="./index.html"
+          >WEB<span class="logo-span">Studio</span></a
+        >
         <ul class="header-link">
-          <li><a class="link" href="./index.html">Studio</a></li>
-          <li><a class="link" href="./index.html">Portfolio</a></li>
-          <li><a class="link" href="./index.html">Contacts</a></li>
+          <li><a class="link" href="">Studio</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-contacts">
@@ -179,7 +181,9 @@
       </section>
     </main>
     <footer>
-      <a class="logo" href="./index.html">WEB<span class="logo-span">Studio</span></a>
+      <a class="logo" href="./index.html"
+        >WEB<span class="logo-span">Studio</span></a
+      >
       <p class="logo-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
