--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         >
         <ul class="header-link">
           <li><a class="link" href="./index.html">Studio</a></li>
-          <li><a class="link" href="./index.html">Portfolio</a></li>
-          <li><a class="link" href="./index.html">Contacts</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-contacts">
