--- a/index.html
+++ b/index.html
@@ -89,26 +89,22 @@
         <h2 class="page-title">Our Team</h2>
         <ul>
           <li>
-            <img class="section-image" src=./images/markguerrero.jpg alt="Mark
-            Guerrero" width="264" height="260"/>
+            <img class="section-image" src=./images/markguerrero.jpg alt="Mark Guerrero"/>
             <h3 class="section-title">Mark Guerrero</h3>
             <p class="section-text">Product Designer</p>
           </li>
           <li>
-            <img class="section-image" src=./images/tomford.jpg alt="Tom Ford"
-            width="264" height="260"/>
+            <img class="section-image" src=./images/tomford.jpg alt="Tom Ford"/>
             <h3 class="section-title">Tom Ford</h3>
             <p class="section-text">Frontend Developer</p>
           </li>
           <li>
-            <img class="section-image" src=./images/camilagarcia.jpg alt="Camila
-            Garcia" width="264" height="260"/>
+            <img class="section-image" src=./images/camilagarcia.jpg alt="Camila Garcia"/>
             <h3 class="section-title">Camila Garcia</h3>
             <p class="section-text">Marketing</p>
           </li>
           <li>
-            <img class="section-image" src=./images/danielwilson.jpg alt="Daniel
-            Wilson" width="264" height="260"/>
+            <img class="section-image" src=./images/danielwilson.jpg alt="Daniel Wilson"/>
             <h3 class="section-title">Daniel Wilson</h3>
             <p class="section-text">UI Designer</p>
           </li>
@@ -118,7 +114,8 @@
         <h2 class="page-title">Our Portfolio</h2>
         <ul>
           <li>
-            <img class="section-image" 
+            <img
+              class="section-image"
               src="./images/bankingapp.jpg"
               alt="Banking App"
               width="360"
@@ -128,7 +125,8 @@
             <p class="section-text">App</p>
           </li>
           <li>
-            <img class="section-image"
+            <img
+              class="section-image"
               src="./images/cashlesspayment.jpg"
               alt="Cashless Payment"
               width="360"
@@ -138,7 +136,8 @@
             <p class="section-text">Marketing</p>
           </li>
           <li>
-            <img class="section-image"
+            <img
+              class="section-image"
               src="./images/meditationapp.jpg"
               alt="Meditation App"
               width="360"
@@ -148,7 +147,8 @@
             <p class="section-text">App</p>
           </li>
           <li>
-            <img class="section-image"
+            <img
+              class="section-image"
               src="./images/taxiservice.jpg"
               alt="Taxi Service"
               width="360"
@@ -158,7 +158,8 @@
             <p class="section-text">Marketing</p>
           </li>
           <li>
-            <img class="section-image"
+            <img
+              class="section-image"
               src="./images/screenillustrations.jpg"
               alt="Screen Illustrations"
               width="360"
@@ -168,7 +169,8 @@
             <p class="section-text">Design</p>
           </li>
           <li>
-            <img class="section-image"
+            <img
+              class="section-image"
               src="./images/onlinecourses.jpg"
               alt="Online Courses"
               width="360"
