--- a/index.html
+++ b/index.html
@@ -89,26 +89,22 @@
         <h2 class="page-title">Our Team</h2>
         <ul>
           <li>
-            <img class="section-image" src=./images/markguerrero.jpg alt="Mark
-            Guerrero" width="264" height="260"/>
+            <img class="section-image" src=./images/markguerrero.jpg alt="Mark Guerrero" width="264" height="260"/>
             <h3 class="section-title">Mark Guerrero</h3>
             <p class="section-text">Product Designer</p>
           </li>
           <li>
-            <img class="section-image" src=./images/tomford.jpg alt="Tom Ford"
-            width="264" height="260"/>
+            <img class="section-image" src=./images/tomford.jpg alt="Tom Ford" width="264" height="260"/>
             <h3 class="section-title">Tom Ford</h3>
             <p class="section-text">Frontend Developer</p>
           </li>
           <li>
-            <img class="section-image" src=./images/camilagarcia.jpg alt="Camila
-            Garcia" width="264" height="260"/>
+            <img class="section-image" src=./images/camilagarcia.jpg alt="Camila Garcia" width="264" height="260"/>
             <h3 class="section-title">Camila Garcia</h3>
             <p class="section-text">Marketing</p>
           </li>
           <li>
-            <img class="section-image" src=./images/danielwilson.jpg alt="Daniel
-            Wilson" width="264" height="260"/>
+            <img class="section-image" src=./images/danielwilson.jpg alt="Daniel Wilson" width="264" height="260"/>
             <h3 class="section-title">Daniel Wilson</h3>
             <p class="section-text">UI Designer</p>
           </li>
@@ -186,7 +182,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="section-footer">
       <a class="logo" href="./index.html"
         >WEB<span class="logo-span">Studio</span></a
       >
