--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </section>
       <section class="main-section-2">
         <h2 class="page-title">Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img class="section-image" src=./images/markguerrero.jpg alt="Mark Guerrero" width="264" height="260"/>
             <h3 class="section-title">Mark Guerrero</h3>
