--- a/index.html
+++ b/index.html
@@ -87,24 +87,24 @@
       </section>
       <section class="main-section-2">
         <h2 class="page-title">Our Team</h2>
-        <ul class="page-list">
+        <ul>
           <li class="page-element">
-            <img src=./images/markguerrero.jpg alt="Mark Guerrero" />
+            <img class="section-image" src=./images/markguerrero.jpg alt="Mark Guerrero" />
             <h3 class="section-title">Mark Guerrero</h3>
             <p class="section-text">Product Designer</p>
           </li>
           <li class="page-element">
-            <img src=./images/tomford.jpg alt="Tom Ford" />
+            <img class="section-image" src=./images/tomford.jpg alt="Tom Ford" />
             <h3 class="section-title">Tom Ford</h3>
             <p class="section-text">Frontend Developer</p>
           </li>
           <li class="page-element">
-            <img src=./images/camilagarcia.jpg alt="Camila Garcia" />
+            <img class="section-image" src=./images/camilagarcia.jpg alt="Camila Garcia" />
             <h3 class="section-title">Camila Garcia</h3>
             <p class="section-text">Marketing</p>
           </li>
           <li class="page-element">
-            <img src=./images/danielwilson.jpg alt="Daniel Wilson" />
+            <img class="section-image" src=./images/danielwilson.jpg alt="Daniel Wilson" />
             <h3 class="section-title">Daniel Wilson</h3>
             <p class="section-text">UI Designer</p>
           </li>
