--- a/index.html
+++ b/index.html
@@ -13,203 +13,215 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
     <link href="./css/styles.css" rel="stylesheet" />
     <title>Document</title>
   </head>
-  <body>
-    <header class="header-items">
-      <nav>
-        <a class="logo" href="./index.html"
-          >WEB<span class="logo-span">Studio</span></a
-        >
-        <ul class="header-link">
-          <li><a class="link" href="./index.html">Studio</a></li>
-          <li><a class="link" href="">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="header-contacts">
-        <ul>
-          <li>
-            <a class="contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+  <div class="container">
+    <body>
+      <header class="header-items">
+        <div class="container">
+          <nav>
+            <a class="logo" href="./index.html"
+              >WEB<span class="logo-span">Studio</span></a
             >
-          </li>
-          <li>
-            <a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
-    </header>
-    <main>
-      <section class="main-section">
-        <h1 class="main-page-title">Effective Solutions for Your Business</h1>
-        <button class="page-button" type="button">Order Service</button>
-      </section>
-      <section class="main-section-1">
-        <h2></h2>
-        <ul>
-          <li>
-            <h3 class="section-title">Strategy</h3>
-            <p class="section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Punctuality</h3>
-            <p class="section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Diligence</h3>
-            <p class="section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Technologies</h3>
-            <p class="section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="main-section-2">
-        <h2 class="page-title">Our Team</h2>
-        <ul class="page-list">
-          <li class="page-element">
-            <img
-              src="./images/markguerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-title">Mark Guerrero</h3>
-            <p class="section-text">Product Designer</p>
-          </li>
-          <li class="page-element">
-            <img
-              src="./images/tomford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-title">Tom Ford</h3>
-            <p class="section-text">Frontend Developer</p>
-          </li>
-          <li class="page-element">
-            <img
-              src="./images/camilagarcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-title">Camila Garcia</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="page-element">
-            <img
-              src="./images/danielwilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-title">Daniel Wilson</h3>
-            <p class="section-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-      <section class="main-section-3">
-        <h2 class="page-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              class="section-image"
-              src="./images/bankingapp.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Banking App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              class="section-image"
-              src="./images/cashlesspayment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Cashless Payment</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              class="section-image"
-              src="./images/meditationapp.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Meditation App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              class="section-image"
-              src="./images/taxiservice.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Taxi Service</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              class="section-image"
-              src="./images/screenillustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Screen Illustrations</h3>
-            <p class="section-text">Design</p>
-          </li>
-          <li>
-            <img
-              class="section-image"
-              src="./images/onlinecourses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Online Courses</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="section-footer">
-      <a class="logo" href="./index.html"
-        >WEB<span class="logo-span">Studio</span></a
-      >
-      <p class="logo-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
-  </body>
+            <ul class="header-link">
+              <li><a class="link" href="./index.html">Studio</a></li>
+              <li><a class="link" href="">Portfolio</a></li>
+              <li><a class="link" href="">Contacts</a></li>
+            </ul>
+          </nav>
+          <address class="header-contacts">
+            <ul>
+              <li>
+                <a class="contact" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="contact" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </header>
+      <main>
+        <section class="main-section">
+          <div class="container">
+            <h1 class="main-page-title">
+              Effective Solutions<br />for Your Business
+            </h1>
+            <button class="page-button" type="button">Order Service</button>
+          </div>
+        </section>
+        <section class="main-section-1">
+          <h2></h2>
+          <ul>
+            <div class="container">
+              <li>
+                <h3 class="section-title">Strategy</h3>
+                <p class="section-text">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </li>
+              <li>
+                <h3 class="section-title">Punctuality</h3>
+                <p class="section-text">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </li>
+              <li>
+                <h3 class="section-title">Diligence</h3>
+                <p class="section-text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li>
+                <h3 class="section-title">Technologies</h3>
+                <p class="section-text">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </li>
+            </div>
+          </ul>
+        </section>
+        <section class="main-section-2">
+          <div class="container">
+            <h2 class="page-title">Our Team</h2>
+            <ul class="page-list">
+              <li class="page-element">
+                <img
+                  src="./images/markguerrero.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="section-title">Mark Guerrero</h3>
+                <p class="section-text">Product Designer</p>
+              </li>
+              <li class="page-element">
+                <img
+                  src="./images/tomford.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="section-title">Tom Ford</h3>
+                <p class="section-text">Frontend Developer</p>
+              </li>
+              <li class="page-element">
+                <img
+                  src="./images/camilagarcia.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="section-title">Camila Garcia</h3>
+                <p class="section-text">Marketing</p>
+              </li>
+              <li class="page-element">
+                <img
+                  src="./images/danielwilson.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="section-title">Daniel Wilson</h3>
+                <p class="section-text">UI Designer</p>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section class="main-section-3">
+          <div class="container">
+            <h2 class="page-title">Our Portfolio</h2>
+            <ul>
+              <li>
+                <img
+                  class="section-image"
+                  src="./images/bankingapp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="section-title">Banking App</h3>
+                <p class="section-text">App</p>
+              </li>
+              <li>
+                <img
+                  class="section-image"
+                  src="./images/cashlesspayment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="section-title">Cashless Payment</h3>
+                <p class="section-text">Marketing</p>
+              </li>
+              <li>
+                <img
+                  class="section-image"
+                  src="./images/meditationapp.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="section-title">Meditation App</h3>
+                <p class="section-text">App</p>
+              </li>
+              <li>
+                <img
+                  class="section-image"
+                  src="./images/taxiservice.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="section-title">Taxi Service</h3>
+                <p class="section-text">Marketing</p>
+              </li>
+              <li>
+                <img
+                  class="section-image"
+                  src="./images/screenillustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="section-title">Screen Illustrations</h3>
+                <p class="section-text">Design</p>
+              </li>
+              <li>
+                <img
+                  class="section-image"
+                  src="./images/onlinecourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="section-title">Online Courses</h3>
+                <p class="section-text">Marketing</p>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </main>
+      <footer class="section-footer">
+        <div class="container">
+          <a class="logo" href="./index.html"
+            >WEB<span class="logo-span">Studio</span></a
+          >
+          <p class="logo-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </footer>
+    </body>
+  </div>
 </html>
