--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
           </ul>
         </section>
         <section class="main-section-2">
+          <h2 class="page-title">Our Team</h2>
           <div class="container">
-            <h2 class="page-title">Our Team</h2>
             <ul class="page-list">
               <li class="page-element">
                 <img
@@ -138,10 +138,10 @@
           </div>
         </section>
         <section class="main-section-3">
+          <h2 class="page-title">Our Portfolio</h2>
           <div class="container">
-            <h2 class="page-title">Our Portfolio</h2>
-            <ul>
-              <li>
+            <ul class="page-list">
+              <li class="page-element">
                 <img
                   class="section-image"
                   src="./images/bankingapp.jpg"
@@ -152,7 +152,7 @@
                 <h3 class="section-title">Banking App</h3>
                 <p class="section-text">App</p>
               </li>
-              <li>
+              <li class="page-element">
                 <img
                   class="section-image"
                   src="./images/cashlesspayment.jpg"
@@ -163,7 +163,7 @@
                 <h3 class="section-title">Cashless Payment</h3>
                 <p class="section-text">Marketing</p>
               </li>
-              <li>
+              <li class="page-element">
                 <img
                   class="section-image"
                   src="./images/meditationapp.jpg"
@@ -174,7 +174,7 @@
                 <h3 class="section-title">Meditation App</h3>
                 <p class="section-text">App</p>
               </li>
-              <li>
+              <li class="page-element">
                 <img
                   class="section-image"
                   src="./images/taxiservice.jpg"
@@ -185,7 +185,7 @@
                 <h3 class="section-title">Taxi Service</h3>
                 <p class="section-text">Marketing</p>
               </li>
-              <li>
+              <li class="page-element">
                 <img
                   class="section-image"
                   src="./images/screenillustrations.jpg"
@@ -196,7 +196,7 @@
                 <h3 class="section-title">Screen Illustrations</h3>
                 <p class="section-text">Design</p>
               </li>
-              <li>
+              <li class="page-element">
                 <img
                   class="section-image"
                   src="./images/onlinecourses.jpg"
@@ -217,8 +217,8 @@
             >WEB<span class="logo-span">Studio</span></a
           >
           <p class="logo-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
+            Increase the flow of customers and <br/>sales for your business with
+            digital <br/>marketing & growth solutions.
           </p>
         </div>
       </footer>
